--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,4 +19,5 @@ colorLoggingLevel: true
 # %line - Line number
 #
 # For more details vist: https://logging.apache.org/log4j/2.x/manual/layouts.html#Patterns
-logFormat: '[%d{HH:mm:ss} %-5level]: %msg%n'
+logFormat: '[%d{HH:mm:ss} %level]: %msg%n'
+
