Add configurable Plugin colors
Also add per-plugin color highlighing

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -29,3 +29,9 @@ INFO: gray
 DEBUG: green bold
 TRACE: blue
 
+#Plugin Colors
+PLUGIN: blue
+P-Essentials: green
+P-WorldEdit: red
+P-WorldGuard: cyan
+P-Vault: magenta
