--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
 
     <name>ColorConsole</name>
-    <version>1.4</version>
+    <version>1.5</version>
     <inceptionYear>2016</inceptionYear>
     <url>http://dev.bukkit.org/bukkit-plugins/colorconsole/</url>
     <description>
@@ -83,6 +83,12 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
+
+        <!--BungeeCord with also the part outside the API-->
+        <repository>
+            <id>RYRED-REPO</id>
+            <url>http://mvn.ryred.co/repository/snapshots/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -91,6 +97,14 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.9-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--Normally should you move this to a extra module, but this project is currently so small-->
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-proxy</artifactId>
+            <version>1.9-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
