--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.6.0</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
@@ -53,7 +53,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.0.2</version>
                 <configuration>
                     <outputDirectory>${outputDir}</outputDirectory>
                 </configuration>
@@ -86,8 +86,8 @@
 
         <!--BungeeCord with also the part outside the API-->
         <repository>
-            <id>myplayplanet-REPO</id>
-            <url>http://maven.myplayplanet.net/</url>
+            <id>bungee-repo</id>
+            <url>http://maven.addstar.com.au/artifactory/ext-snapshot-local/</url>
         </repository>
 
         <!--Sponge-API-->
@@ -110,14 +110,14 @@
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-proxy</artifactId>
-            <version>1.8-SNAPSHOT</version>
+            <version>1.11-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.spongepowered</groupId>
             <artifactId>spongeapi</artifactId>
-            <version>5.0.0-SNAPSHOT</version>
+            <version>5.0.0</version>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
