--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
         <!--BungeeCord with also the part outside the API-->
         <repository>
             <id>bungee-repo</id>
-            <url>http://maven.addstar.com.au/artifactory/ext-snapshot-local/</url>
+            <url>https://repo.extension.ws/content/repositories/snapshots/</url>
         </repository>
 
         <!--Sponge-API-->
@@ -108,7 +108,7 @@
 
         <!--Normally should you move this to a extra module, but this project is currently so small-->
         <dependency>
-            <groupId>net.md-5</groupId>
+            <groupId>tc.oc</groupId>
             <artifactId>bungeecord-proxy</artifactId>
             <version>1.11-SNAPSHOT</version>
             <scope>provided</scope>
