--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,9 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.0-beta9</version>
+            <!--Minecraft 1.12 uses 2.1 and earlier versions 2.0-beta9-->
+            <version>2.1</version>
+            <!--<version>2.0-beta9</version>-->
             <scope>provided</scope>
         </dependency>
     </dependencies>
