--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,18 @@
     <packaging>jar</packaging>
 
     <name>ColorConsole</name>
-    <version>2.3.1</version>
+    <version>2.3.2</version>
     <inceptionYear>2016</inceptionYear>
-    <url>http://dev.bukkit.org/bukkit-plugins/colorconsole/</url>
+    <url>https://dev.bukkit.org/bukkit-plugins/colorconsole/</url>
     <description>
         Print colorful console messages depending on the logging level
     </description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <build>
@@ -27,22 +30,11 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <minimizeJar>true</minimizeJar>
                     <artifactSet>
                         <includes>
                             <include>org.fusesource.jansi:jansi</include>
@@ -103,7 +95,7 @@
         <!--Sponge-API-->
         <repository>
             <id>sponge-repo</id>
-            <url>http://repo.spongepowered.org/maven</url>
+            <url>https://repo.spongepowered.org/maven</url>
         </repository>
     </repositories>
 
@@ -112,7 +104,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.12-R0.1-SNAPSHOT</version>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -127,7 +119,7 @@
         <dependency>
             <groupId>org.spongepowered</groupId>
             <artifactId>spongeapi</artifactId>
-            <version>7.0.0-SNAPSHOT</version>
+            <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
 
