--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -6,7 +6,7 @@ name: ${project.name}
 main: ${project.groupId}.${project.artifactId}.bungee.${project.name}Bungee
 
 version: ${project.version}
-author: games647, http://github.com/games647/ColorConsole/graphs/contributors
+author: games647, https://github.com/games647/ColorConsole/graphs/contributors
 
 description: |
     ${project.description}
