--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,3 +10,6 @@ description: |
     ${project.description}
 website: ${project.url}
 dev-url: ${project.url}
+
+# This plugin don't have to be transformed for compatibility with Minecraft >= 1.13
+api-version: 1.13
